# cmdb-agent

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Makefile
ci/docker/: Dockerfile  docker-entrypoint.sh
deploy/debug/: server.yaml
deploy/raw/: daemonset.yaml
etc/cmdb/: agent.toml
etc/pkginstaller/macos/: package.sh
scripts/debug/: local-httpd.py  run-kind-sample.sh
scripts/lib/: log.sh
src/: agent.rs  main.rs
src/collect/: host.rs  http.rs  mod.rs  net.rs  task.rs
src/collect/smbios/: mod.rs  opt.rs
src/schema/: mod.rs
src/support/: clap_ext.rs  kube.rs  mod.rs
src/support/smbios/: error.rs  mod.rs  opt.rs
src/web/: mod.rs
