[package]
name = "cmdb-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "^1.0.1"
clap = { version = "^4.3.11", features = ["color", "derive"] }
clap_derive = "^4.3.2"
log = "^0.4.19"
serde = { version = "^1.0.170", features = ["derive"] }
serde_json = "^1.0.100"

[target.'cfg(unix)'.dependencies]
libc = "^0.2.147"
signal-hook = "^0.3.15"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "^0.26.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = { version = "^0.2.7", features = ["exception", "objc_exception"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3.9", features = [
    "consoleapi", "fileapi", "minwinbase", "minwindef", "ntdef", "processenv", "winbase"
] }
